--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </li>
     </ul>
     <h2 id="site">site</h2>
-    <img src="image/laptop-593673.jpg" alt="パソコンの画像">
+    <img src="https://kooy02.github.io/laptop-593673.jpg" alt="パソコンの画像">
     <h2 id="music">music</h2>
-    <img src="image/headphone-1868615.jpg" alt="ヘッドフォン">
+    <img src="https://kooy02.github.io/headphone-1868615.jpg" alt="ヘッドフォン">
     <h2 id="photo">photo</h2>
-    <img src="image/laptop-6966045.jpg" alt="カメラ">
+    <img src="https://kooy02.github.io/laptop-6966045.jpg" alt="カメラ">
 </body>
 </html>
